Fixed button overflowing.

--- a/src/components/EntryText/EntryText.module.scss
+++ b/src/components/EntryText/EntryText.module.scss
@@ -41,4 +41,5 @@
 .buttons {
   margin-top: 2rem;
   padding: 0.3rem;
+  padding-left: 1rem;
 }
